<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:tools="http://schemas.android.com/tools">

    <com.google.android.material.appbar.AppBarLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="#FFFFFF"
        tools:layout_editor_absoluteX="10dp"
        tools:layout_editor_absoluteY="10dp">

        <androidx.appcompat.widget.Toolbar
            android:id="@+id/toolbar6"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/rounded_corner"
            android:backgroundTint="#DCF80101"
            android:fontFamily="serif"
            android:minHeight="?attr/actionBarSize"
            android:padding="20dp"
            android:textAlignment="textStart"
            android:textSize="24sp"
            android:textStyle="bold"
            android:theme="?attr/actionBarTheme"
            app:titleTextColor="#FFFFFF" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <TextView
                android:id="@+id/textView20"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginVertical="20dp"
                android:paddingHorizontal="60dp"
                android:paddingVertical="60dp"
                android:text="@string/payment_text"
                android:textAlignment="center"
                android:textColor="@color/black"
                android:textSize="16sp" />

            <TextView
                android:id="@+id/textView21"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text= "@string/select_a_service_to_pay"
                android:textAlignment="center"
                android:textColor="@color/black" />

            <Spinner
                android:id="@+id/optionSpinner"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="60dp"
                android:layout_marginVertical="30dp"
                android:paddingVertical="5dp"
                android:textAlignment="center" />

            <TextView
                android:id="@+id/textView22"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/select_an_account"
                android:textAlignment="center"
                android:textColor="@color/black" />

            <Spinner
                android:id="@+id/paySpinner"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="60dp"
                android:layout_marginVertical="30dp"
                android:paddingVertical="5dp"
                android:textAlignment="center" />

            <TextView
                android:id="@+id/textView23"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/ingress_an_amount_to_pay"
                android:textAlignment="center"
                android:textColor="@color/black" />

            <EditText
                android:id="@+id/editTextAmount"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:ems="10"
                android:layout_marginHorizontal="60dp"
                android:layout_marginVertical="30dp"
                android:paddingVertical="5dp"
                android:textAlignment="center"
                android:inputType="number" />

            <Button
                android:id="@+id/payment"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="80dp"
                android:layout_marginVertical="20dp"
                android:backgroundTint="#2F92E8"
                android:text="@string/pay" />

        </LinearLayout>

    </com.google.android.material.appbar.AppBarLayout>

</androidx.constraintlayout.widget.ConstraintLayout>