<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#FFFFFF"
    android:padding="10dp"
    >

    <com.google.android.material.appbar.AppBarLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="#FFFFFF"
        tools:layout_editor_absoluteX="10dp"
        tools:layout_editor_absoluteY="10dp">

        <androidx.appcompat.widget.Toolbar
            android:id="@+id/toolbar4"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/rounded_corner"
            android:backgroundTint="#DCF80101"
            android:fontFamily="serif"
            android:minHeight="?attr/actionBarSize"
            android:padding="20dp"
            android:textAlignment="textStart"
            android:textSize="24sp"
            android:textStyle="bold"
            android:theme="?attr/actionBarTheme"
            app:titleTextColor="#FFFFFF" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <TextView
                android:id="@+id/textView3"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginVertical="20dp"
                android:paddingHorizontal="60dp"
                android:paddingVertical="60dp"
                android:text="@string/download_text"
                android:textAlignment="center"
                android:textColor="@color/black"
                android:textSize="16sp" />

            <TextView
                android:id="@+id/textView7"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/select_an_option"
                android:textColor="@color/black"
                android:textAlignment="center" />

            <Spinner
                android:id="@+id/accountSpinner"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="60dp"
                android:layout_marginVertical="30dp"
                android:paddingVertical="5dp"
                android:textAlignment="center" />

            <TextView
                android:id="@+id/textView8"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/select_an_account"
                android:textColor="@color/black"
                android:textAlignment="center" />

            <Spinner
                android:id="@+id/accounts"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="60dp"
                android:layout_marginVertical="30dp"
                android:paddingVertical="5dp"
                android:textAlignment="center"/>

            <TextView
                android:id="@+id/textView6"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/select_a_month"
                android:textColor="@color/black"
                android:textAlignment="center" />

            <Spinner
                android:id="@+id/months"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="60dp"
                android:layout_marginVertical="30dp"
                android:paddingVertical="5dp"
                android:textAlignment="center" />

            <Button
                android:id="@+id/download"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="80dp"
                android:layout_marginVertical="20dp"
                android:backgroundTint="#2F92E8"
                android:enabled="false"
                android:text="@string/download" />

        </LinearLayout>
    </com.google.android.material.appbar.AppBarLayout>

</androidx.constraintlayout.widget.ConstraintLayout>