<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:tools="http://schemas.android.com/tools">

    <com.google.android.material.appbar.AppBarLayout
        tools:layout_editor_absoluteX="10dp"
        tools:layout_editor_absoluteY="10dp"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="#FFFFFF">

        <ProgressBar
            android:id="@+id/pbarProgreso"
            style="?android:attr/progressBarStyleHorizontal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="5dip"
            android:layout_marginRight="5dip"
            android:layout_marginBottom="5dip"
            android:max="100"
            android:visibility="gone" />

        <androidx.appcompat.widget.Toolbar
            android:id="@+id/toolbar7"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/rounded_corner"
            android:backgroundTint="#DCF80101"
            android:fontFamily="serif"
            android:minHeight="?attr/actionBarSize"
            android:padding="20dp"
            android:textAlignment="textStart"
            android:textSize="24sp"
            android:textStyle="bold"
            android:theme="?attr/actionBarTheme"
            app:titleTextColor="#FFFFFF" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <TextView
                android:id="@+id/textView31"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginVertical="20dp"
                android:paddingHorizontal="60dp"
                android:paddingVertical="40dp"
                android:text="@string/cellphone_text"
                android:textAlignment="center"
                android:textColor="@color/black"
                android:textSize="16sp" />

            <TextView
                android:id="@+id/textView32"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/select_a_card"
                android:textAlignment="center"
                android:textColor="@color/black" />

            <Spinner
                android:id="@+id/phoneSpinner"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="60dp"
                android:layout_marginVertical="30dp"
                android:paddingVertical="5dp"
                android:textAlignment="center" />

            <TextView
                android:id="@+id/textView33"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/phone_number"
                android:textAlignment="center"
                android:textColor="@color/black" />

            <EditText
                android:id="@+id/editTextPhone"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:ems="10"
                android:layout_marginHorizontal="60dp"
                android:layout_marginVertical="30dp"
                android:paddingVertical="5dp"
                android:textAlignment="center"
                android:inputType="phone" />


            <TextView
                android:id="@+id/textView34"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/enter_purchase_amount"
                android:textAlignment="center"
                android:textColor="@color/black" />

            <EditText
                android:id="@+id/editTextNumber"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:ems="10"
                android:layout_marginHorizontal="60dp"
                android:layout_marginVertical="30dp"
                android:paddingVertical="5dp"
                android:textAlignment="center"
                android:inputType="number" />



            <Button
                android:id="@+id/buy"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="80dp"
                android:layout_marginVertical="20dp"
                android:backgroundTint="#2F92E8"
                android:text="@string/buy" />

        </LinearLayout>

    </com.google.android.material.appbar.AppBarLayout>

</androidx.constraintlayout.widget.ConstraintLayout>