<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="#D3BCE3"
        android:orientation="vertical"
        android:paddingVertical="2dp"
        tools:layout_editor_absoluteX="0dp"
        tools:layout_editor_absoluteY="0dp">

        <TextView
            android:id="@+id/textMoveId"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingStart="25dp"
            android:paddingEnd="16dp"
            android:textColor="#000000"
            android:textSize="18sp"
            android:textStyle="bold" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/lblCardNameM"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:paddingStart="16dp"
                android:paddingEnd="10dp"
                android:text="@string/card_name"
                android:textColor="#000000"
                android:textSize="12sp"
                android:textStyle="normal" />

            <TextView
                android:id="@+id/textCardNameM"
                android:layout_width="100dp"
                android:layout_height="wrap_content"
                android:textColor="#000000"
                android:textStyle="normal"
                tools:textSize="12sp" />

            <TextView
                android:id="@+id/lblCardEndingM"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:paddingStart="16dp"
                android:paddingEnd="10dp"
                android:text="@string/card_ending"
                android:textColor="#000000"
                android:textSize="12sp"
                android:textStyle="normal" />

            <TextView
                android:id="@+id/textCardEndingM"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="#000000"
                android:textStyle="normal"
                tools:textSize="12sp" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/lblAmountM"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:paddingStart="16dp"
                android:paddingEnd="10dp"
                android:text="@string/amount"
                android:textColor="#000000"
                android:textSize="12sp"
                android:textStyle="normal" />

            <TextView
                android:id="@+id/textAmountM"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textColor="#000000"
                android:textStyle="normal"
                tools:textSize="12sp" />
        </LinearLayout>


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/lblDateM"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:paddingStart="16dp"
                android:paddingEnd="10dp"
                android:text="@string/movement_date"
                android:textColor="#000000"
                android:textSize="12sp"
                android:textStyle="normal" />

            <TextView
                android:id="@+id/textDateM"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textColor="#000000"
                android:textStyle="normal"
                tools:textSize="12sp" />
        </LinearLayout>


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            tools:layout_editor_absoluteY="2dp">

            <TextView
                android:id="@+id/lblMovementM"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingStart="16dp"
                android:paddingEnd="10dp"
                android:text="@string/description"
                android:textColor="#000000"
                android:textSize="12sp"
                android:textStyle="normal" />

            <TextView
                android:id="@+id/textMovementM"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingStart="16dp"
                android:paddingEnd="10dp"
                android:textColor="#1B43B1"
                android:textStyle="normal"
                tools:textSize="12sp" />
        </LinearLayout>

    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>