<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#FFFFFF"
    android:padding="10dp"
    tools:context=".MainActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        tools:layout_editor_absoluteX="-29dp"
        tools:layout_editor_absoluteY="288dp">

        <TextView
            android:id="@+id/BankTitle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/rounded_corner"
            android:backgroundTint="#DCF80101"
            android:fontFamily="serif"
            android:padding="20dp"
            android:text="@string/ipenza_bank"
            android:textAlignment="center"
            android:textColor="#FFFFFF"
            android:textSize="24sp"
            android:textStyle="bold" />

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginVertical="50dp"
            android:paddingVertical="80dp">

            <TextView
                android:id="@+id/UserTitle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginVertical="20dp"
                android:text="@string/user_email"
                android:textColor="#000000"
                android:textStyle="bold"
                app:layout_constraintBottom_toTopOf="@+id/editTextTextEmailAddress"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <EditText
                android:id="@+id/editTextTextEmailAddress"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginVertical="20dp"
                android:ems="12"
                android:inputType="textEmailAddress"
                android:textColor="#272727"
                app:layout_constraintBottom_toTopOf="@+id/PassTitle"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/UserTitle" />

            <TextView
                android:id="@+id/PassTitle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginVertical="20dp"
                android:text="@string/password"
                android:textColor="#000000"
                android:textStyle="bold"
                app:layout_constraintBottom_toTopOf="@+id/editTextTextPassword"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/editTextTextEmailAddress" />

            <EditText
                android:id="@+id/editTextTextPassword"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginVertical="20dp"
                android:ems="12"
                android:inputType="textPassword"
                android:textColor="#272727"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/PassTitle" />

        </androidx.constraintlayout.widget.ConstraintLayout>

        <Button
            android:id="@+id/continueBtn"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="70dp"
            android:backgroundTint="#2962FF"
            android:text="@string/continuar"
            android:textColor="#FFFFFF"
            android:visibility="visible" />

    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>