<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#FFFFFF"
    android:padding="10dp"
    >

    <com.google.android.material.appbar.AppBarLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="#FFFFFF"
        tools:layout_editor_absoluteX="10dp"
        tools:layout_editor_absoluteY="10dp">

        <androidx.appcompat.widget.Toolbar
            android:id="@+id/toolbar3"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/rounded_corner"
            android:backgroundTint="#DCF80101"
            android:fontFamily="serif"
            android:minHeight="?attr/actionBarSize"
            android:padding="20dp"
            android:textAlignment="textStart"
            android:textSize="24sp"
            android:textStyle="bold"
            android:theme="?attr/actionBarTheme"
            app:titleTextColor="#FFFFFF" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginVertical="10dp"
            android:orientation="vertical">

            <TextView
                android:id="@+id/textView4"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginVertical="5dp"
                android:background="#A3393838"
                android:paddingVertical="5dp"
                android:text="@string/your_accounts"
                android:textAlignment="center"
                android:textColor="#FDFDFD"
                android:textSize="20sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/textView2"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginVertical="10dp"
                android:background="#DFA2A2"
                android:paddingHorizontal="10dp"
                android:text="@string/debit_cards"
                android:textColor="#000000"
                android:textSize="16sp"
                android:textStyle="bold|italic" />

            <ListView
                android:id="@+id/DCList"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

            </ListView>

            <TextView
                android:id="@+id/textView"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginVertical="10dp"
                android:background="#DFA2A2"
                android:paddingHorizontal="10dp"
                android:text="@string/credit_cards"
                android:textColor="#000000"
                android:textSize="16sp"
                android:textStyle="bold|italic" />

            <ListView
                android:id="@+id/CCList"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />

        </LinearLayout>
    </com.google.android.material.appbar.AppBarLayout>

</androidx.constraintlayout.widget.ConstraintLayout>